# falcon

./: .editorconfig  .gitignore  .pylintrc  Quizzes.md  README.md  TODO  Vagrantfile  buildwheel.sh  clearbuild.sh  cmd  dev-requirements.txt  falcon.py  falconf.yaml  package.json  requirements.txt  setup.cfg  setup.py
examples/cpp/return-val/: CMakeLists.txt  compile.sh  studentMain.cpp  studentMain.h  submitMain.cpp  testMain.cpp
grader-libs/cpp/: CMakeLists.txt  FeedbackTest.cpp  Makefile  README.md  RubricItemTest.cpp  StatsTest.cpp  install.sh
grader-libs/cpp/docs/html/: _c_make_c_compiler_id_8c.html  _feedback_8h_source.html  _grader_8cpp.html  _grader_8h.html  _grader_8h_source.html  _rubric_item_8cpp.html  _rubric_item_8h.html  _rubric_item_8h_source.html  _stats_8cpp.html  _stats_8h_source.html  annotated_dup.js  class_feedback.html  class_grader-members.html  class_grader.html  class_grader.js  class_rubric_item-members.html  class_rubric_item.html  class_rubric_item.js  class_stats-members.html  class_stats.html  class_stats.js  dir_295371551b8382538131f1cdfe7bb393.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.js  functions.html  functions_func.html  functions_vars.html  globals.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js
grader-libs/cpp/docs/html/search/: all_1.js  all_11.js  all_5.js  all_8.js  all_d.js  all_e.js  classes_1.js  files_1.js  files_2.js  files_3.js  pages_0.js  (+6 more)
grader-libs/cpp/docs/latex/: _grader_8cpp.tex  _rubric_item_8cpp.tex  _rubric_item_8h.tex  annotated.tex  class_feedback.tex  class_grader.tex  class_rubric_item.tex  class_stats.tex  dir_0d1db95f58c99a1b74b8341f1283612c.tex  dir_48a70d03ecb935cee95f4f7fda290e28.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  feature__tests_8cxx.tex  md__r_e_a_d_m_e.tex
grader-libs/cpp/include/: Feedback.h  Grader.cpp  Grader.h  RubricItem.cpp  RubricItem.h  Stats.cpp  Stats.h
grader-libs/cpp/test/: GraderTest.cpp  RubricItemTest.cpp  StatsTest.cpp
test/as_import/: CMakeLists.txt  StudentCode.h  falconf.yaml  studentCode.cpp  udacityMain.cpp
udfalcon/graderlib/cpp/: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
udfalcon/graderlib/cpp/include/: Feedback.cpp  Grader.h  Stats.cpp  Stats.h
udfalcon/graderlib/cpp/test/: GraderTest.cpp  test_main.cpp
(+196 files in other folders)
